[tool.poetry]
name = "pytrends"
version = "4.9.2"
description = "Pseudo API for Google Trends"
authors = ["John Hogue <dreyco676@gmail.com>", "Burton DeWilde <dreyco676@gmail.com>"]
license = "Apache 2.0"
homepage = "https://github.com/dreyco676/pytrends"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["google trends api search"]
requires-python = ">=3.7"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.32"  # Add any other dependencies you need

[tool.poetry.dev-dependencies]
pytest = "^6.2"  # Add your testing dependencies if needed

[build-system]
requires = ["setuptools", "setuptools-scm", "poetry-core"]
build-backend = "poetry.core.masonry.api"
